CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(OpenMVO)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

INCLUDE(cmake/script_version_number.cmake REQUIRED)

SET(OPENMVO_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(OPENMVO_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(OPENMVO_BINARY_DIR ${PROJECT_BINARY_DIR})

INCLUDE(cmake/UtilsMacros.cmake REQUIRED)

SET(CMAKE_DEBUG_POSTFIX "d")

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(g2o REQUIRED)
FIND_PACKAGE(Boost REQUIRED)

INCLUDE(cmake/script_eigen.cmake)
INCLUDE(cmake)
