PROJECT(SOCKETSERVER)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE( Opencv_required )
FIND_PACKAGE(Threads)
#FIND_PACKAGE( Protobuf REQUIRED )

MESSAGE(STATUS ${PROJECT_SOURCE_DIR})

INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR} )
INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/Includes )

ADD_SUBDIRECTORY(Sources) 
ADD_SUBDIRECTORY(proto) 
