PROJECT(SOCKETSERVER)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

find_package(Threads)

MESSAGE(STATUS ${PROJECT_SOURCE_DIR})

AUX_SOURCE_DIRECTORY(. APP_SRC)

SET(CMAKE_BUILE_TYPE DEBUG)
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -lpthread -Wall -g -ggdb -std=c++11")

add_compile_options(-g)
add_compile_options(-std=c++11)

ADD_EXECUTABLE(SOCKETSERVER ${APP_SRC})

target_link_libraries(SOCKETSERVER ${CMAKE_THREAD_LIBS_INIT})
