AUX_SOURCE_DIRECTORY(. APP_SRC)

INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/Includes )
INCLUDE_DIRECTORIES( ${PROJECT_BINARY_DIR}/proto )
INCLUDE_DIRECTORIES( "/usr/local/include/google" )

LINK_DIRECTORIES( "/usr/local/lib" )

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -Wall -g -std=c++11" )

ADD_EXECUTABLE( SOCKET_SERVER ${APP_SRC} )

TARGET_LINK_LIBRARIES(SOCKET_SERVER ${CMAKE_THREAD_LIBS_INIT} ${OPENCV_LIBS} proto protobuf )


